tests/e2e/expression_no_event3.error
Error: syntax error in story at line 1, column 1

1|    http server
      ^^^^^^^^^^^

E0156: Event based action `server` of service `http` cannot be used in expressions.
